Commit from part 2
